--- a/src/app.css
+++ b/src/app.css
@@ -24,3 +24,5 @@ body.noScroll { /* ...or body.dialogShowing */
   display: none;
 }
 .no-padding{padding: 0 !important}
+.marging-top-46{margin-top: 46px !important}
+.marging-bottom-46{margin-bottom: 46px !important}
