New input system to add return visits names

--- a/src/app.css
+++ b/src/app.css
@@ -26,3 +26,4 @@ body.noScroll { /* ...or body.dialogShowing */
 .no-padding{padding: 0 !important}
 .marging-top-46{margin-top: 46px !important}
 .marging-bottom-46{margin-bottom: 46px !important}
+.width-70per{width: 70%;}
